add TGF & DOT writers