@@ -2,8 +2,8 @@ package com.graphinout.reader.dot;
 
 import com.graphinout.base.gio.GioReader;
 import com.graphinout.base.gio.GioService;
+import com.graphinout.base.gio.GioWriter;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class DotService implements GioService {
@@ -15,7 +15,13 @@ public class DotService implements GioService {
 
     @Override
     public List<GioReader> readers() {
-        return Arrays.asList(new DotReader());
+        return List.of(new DotReader());
     }
+
+    @Override
+    public List<GioWriter> writers() {
+        return List.of(new DotWriter());
+    }
+
 
 }
